create basic html structure for nav bar

--- a/index.html
+++ b/index.html
@@ -1,6 +1,24 @@
-
 <!DOCTYPE html>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Heroes</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+</head>
 <body>
-    <i class="fa-solid fa-house"></i>
+    <header>
+        <h1></h1>
+        <nav>
+            <ul>
+                <li><i class="fa-solid fa-house"></i><a href="index.html">Home</a></li>
+                <li><i class="fa-brands fa-product-hunt"></i><a href="products.html">Products</a></li>
+                <li><i class="fa-solid fa-bell-concierge"></i><a href="services.html">Services</a></li>
+                <li><i class="fa-solid fa-address-book"></i><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 </body>
+
+</html>
