change local repository name

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-<body>
+<body class="bg-[url('images/backgound_image.jpg')] bg-cover bg-center bg-no-repeat bg-gradient-to-br from-blue-500/70 to-purple-600/70 bg-blend-overlay min-h-screen">
     <header class="shadow-lg">
         <h1 class="bg-blue-600 text-white text-center py-4 text-2xl font-bold">Heroes</h1>
         <nav class="bg-gray-800 text-white">
@@ -32,6 +32,12 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <section class="mx-auto my-8 p-6 bg-white rounded-lg shadow-md">
+            <h2 class="text-3xl font-bold text-center mb-6">Welcome to Heroes</h2>
+            <p class="text-lg text-gray-700 mb-4">Explore our range of products and services designed to empower you.</p>
+        </section>
+    </main>
 </body>
 
 </html>
