--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-<body class="bg-[url('images/backgound_image.jpg')] bg-cover bg-center bg-no-repeat bg-gradient-to-br from-blue-500/70 to-purple-600/70 bg-blend-overlay min-h-screen">
+<body class="bg-[url('images/background_image.jpg')] bg-cover bg-center bg-no-repeat min-h-screen">
     <header class="shadow-lg">
         <h1 class="bg-blue-600 text-white text-center py-4 text-2xl font-bold">Heroes</h1>
         <nav class="bg-gray-800 text-white">
@@ -18,12 +18,12 @@
                     <a href="index.html" class="hover:text-blue-300">Home</a>
                 </li>
                 <li class="hover:bg-gray-700 px-4 py-2 rounded transition duration-300">
-                    <i class="fa-brands fa-product-hunt mr-2"></i>
-                    <a href="products.html" class="hover:text-blue-300">Products</a>
+                    <i class="fa-solid fa-earth-americas mr-2"></i>
+                    <a href="places.html" class="hover:text-blue-300">Places</a>
                 </li>
                 <li class="hover:bg-gray-700 px-4 py-2 rounded transition duration-300">
-                    <i class="fa-solid fa-bell-concierge mr-2"></i>
-                    <a href="services.html" class="hover:text-blue-300">Services</a>
+                    <i class="fa-solid fa-image mr-2"></i>
+                    <a href="gallery.html" class="hover:text-blue-300">Gallery</a>
                 </li>
                 <li class="hover:bg-gray-700 px-4 py-2 rounded transition duration-300">
                     <i class="fa-solid fa-address-book mr-2"></i>
@@ -35,7 +35,13 @@
     <main>
         <section class="mx-auto my-8 p-6 bg-white rounded-lg shadow-md">
             <h2 class="text-3xl font-bold text-center mb-6">Welcome to Heroes</h2>
-            <p class="text-lg text-gray-700 mb-4">Explore our range of products and services designed to empower you.</p>
+            <p class="text-lg text-gray-700 mb-6">Explore our range of products and services designed to empower you.</p>
+            <div class="text-center">
+                <button class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-8 rounded-lg transition duration-300 transform hover:scale-105">
+                    <i class="fa-solid fa-rocket mr-2"></i>
+                    Explore Now
+                </button>
+            </div>
         </section>
     </main>
 </body>
