--- a/index.html
+++ b/index.html
@@ -43,6 +43,18 @@
                 </button>
             </div>
         </section>
+        
+        <section class="mx-auto my-8 p-6 bg-white rounded-lg shadow-md max-w-4xl">
+            <h2 class="text-3xl font-bold text-center mb-6">Watch Our Promotional Video</h2>
+            <div class="flex justify-center">
+                <video controls class="w-full max-w-3xl rounded-lg shadow-lg">
+                    <source src="videos/promotion_video.webm" type="video/mp4">
+                    <track kind="subtitles" src="subtitles/subtitle.vtt" srclang="en" label="English" default>
+                    Your browser does not support the video tag.
+                </video>
+            </div>
+            <p class="text-center text-gray-600 mt-4">Learn more about our heroes and their incredible journeys.</p>
+        </section>
     </main>
 </body>
 
