--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="flex justify-center">
                 <video controls class="w-full max-w-3xl rounded-lg shadow-lg">
                     <source src="videos/promotion_video.webm" type="video/mp4">
-                    <track kind="subtitles" src="subtitles/subtitle.vtt" srclang="en" label="English" default>
+                    <track kind="subtitles" src="subtitles/subtitle.vtt" srclang="en" label="English">
                     Your browser does not support the video tag.
                 </video>
             </div>
