--- a/index.html
+++ b/index.html
@@ -47,13 +47,28 @@
         <section class="mx-auto my-8 p-6 bg-white rounded-lg shadow-md max-w-4xl">
             <h2 class="text-3xl font-bold text-center mb-6">Watch Our Promotional Video</h2>
             <div class="flex justify-center">
-                <video controls class="w-full max-w-3xl rounded-lg shadow-lg">
+                <video controls autoplay controlslist="nodownload" class="w-full max-w-3xl rounded-lg shadow-lg">
                     <source src="video/promotion_video.webm" type="video/mp4">
                     <track kind="subtitles" src="subtitle/subtitle.vtt" srclang="en" label="English">
                     Your browser does not support the video tag.
                 </video>
             </div>
             <p class="text-center text-gray-600 mt-4">Learn more about our heroes and their incredible journeys.</p>
+        </section>
+        
+        <section class="mx-auto my-8 p-6 bg-white rounded-lg shadow-md max-w-4xl">
+            <h2 class="text-3xl font-bold text-center mb-6">Relaxing Background Music</h2>
+            <p class="text-center text-gray-600 mb-6">Enjoy some soothing instrumental music while browsing our site</p>
+            <div class="flex justify-center">
+                <audio controls controlslist="nodownload" class="w-full max-w-2xl">
+                    <source src="audio/Double-Rainbow-chosic.com_.mp3" type="audio/mpeg">
+                    Your browser does not support the audio element.
+                </audio>
+            </div>
+            <p class="text-center text-gray-500 text-sm mt-4">
+                <i class="fa-solid fa-music mr-2"></i>
+                Click play to enjoy relaxing background music
+            </p>
         </section>
     </main>
 </body>
