change name of about.html to contact.html

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <article class="p-4 sm:p-6 bg-gradient-to-r from-blue-400/25 via-pink-400/25 to-purple-500/25 backdrop-blur-sm text-white rounded-lg shadow-md border border-white/20">
                 <h2 class="text-xl sm:text-2xl lg:text-3xl font-bold text-center mb-4 sm:mb-6 text-shadow-lg">Watch Our Promotional Video</h2>
                 <figure class="flex justify-center">
-                    <video controls autoplay muted controlslist="nodownload" class="w-full rounded-lg shadow-lg">
+                    <video controls controlslist="nodownload" class="w-full rounded-lg shadow-lg">
                         <source src="video/promotion_video.webm" type="video/mp4">
                         <track kind="subtitles" src="subtitle/subtitle.vtt" srclang="en" label="English">
                         Your browser does not support the video tag.
