--- a/contact.html
+++ b/contact.html
@@ -2,16 +2,46 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us</title>
+    <title>Contact Us - Travel Explorer</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-    <h1>About Us</h1>
-    <p>Welcome to our website! We are dedicated to providing the best service to our clients.</p>
-    <h2>Contact Support</h2>
-    <p>
-        <strong>Support Number:</strong> +1-234-567-8901<br>
-        <strong>Support Email:</strong> support@example.com
-    </p>
+<body class="bg-blue-50 font-sans">
+    <main class="max-w-xl mx-auto mt-10 bg-white p-8 rounded-lg shadow-md">
+        <header>
+            <h1 class="text-3xl font-bold text-green-800 mb-4">Contact Us</h1>
+            <p class="text-gray-700 mb-6">
+                Have questions or need help planning your next adventure? Fill out the form below and our team will get back to you soon!
+            </p>
+        </header>
+        <section class="space-y-5">
+            <form class="space-y-5">
+                <fieldset>
+                    <label for="name" class="block mb-1 font-medium text-gray-800">Your Name</label>
+                    <input type="text" id="name" name="name" required
+                        class="w-full px-3 py-2 border border-green-200 rounded focus:outline-none focus:ring-2 focus:ring-green-300" />
+                </fieldset>
+                <fieldset>
+                    <label for="email" class="block mb-1 font-medium text-gray-800">Your Email</label>
+                    <input type="email" id="email" name="email" required
+                        class="w-full px-3 py-2 border border-green-200 rounded focus:outline-none focus:ring-2 focus:ring-green-300" />
+                </fieldset>
+                <fieldset>
+                    <label for="message" class="block mb-1 font-medium text-gray-800">Message</label>
+                    <textarea id="message" name="message" rows="5" required
+                        class="w-full px-3 py-2 border border-green-200 rounded focus:outline-none focus:ring-2 focus:ring-green-300"></textarea>
+                </fieldset>
+                <button type="submit"
+                    class="bg-green-700 text-white px-6 py-2 rounded hover:bg-green-900 transition-colors font-semibold">
+                    Send Message
+                </button>
+            </form>
+        </section>
+        <footer class="mt-8 text-gray-800 text-sm space-y-1">
+            <p><strong>Email:</strong> heroes@guardianacademy.org</p>
+            <p><strong>Phone:</strong> +1 (555) HERO-911</p>
+            <p><strong>Address:</strong> 42 Champions Boulevard, Hero Heights, Legacy City 90210</p>
+        </footer>
+    </main>
 </body>
 </html>
