--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-<body class="bg-[url('image/background_image.jpg')] bg-cover bg-center bg-no-repeat min-h-screen bg-gray-800">
+<body class="bg-[url('image/background_image.jpg')] bg-cover bg-center bg-no-repeat bg-fixed min-h-screen bg-gray-800">
     <header class="shadow-lg">
         <h1 class="bg-blue-600 text-white text-center py-3 sm:py-4 text-xl sm:text-2xl font-bold">Heroes</h1>
         <nav class="bg-gray-800 text-white">
